# nSnake

./: CMakeLists.txt  Makefile  dev-Makefile  find-and-categorize.sh  instructor-Makefile  local-Makefile
src/: main.cpp
src/Config/: Arguments.cpp  Globals.cpp
src/Display/: WindowGameHelp.cpp
src/Display/Layouts/: LayoutGame.cpp
src/Entities/: ScoreFile.cpp
src/States/: GameStateMainMenu.cpp
